--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/style-resources": "^1.2.1",
     "core-js": "^3.19.3",
+    "node-sass": "^7.0.1",
     "nuxt": "^2.15.8",
+    "sass": "^1.49.9",
+    "sass-loader": "10",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
